Dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    #nginx.ingress.kubernetes.io/whitelist-source-range: "OPTIONAL_IP_RANGES_GO_HERE"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  namespace: kubernetes-dashboard
spec:
  tls:
  - hosts:
    - DASHBOARD_HOSTNAME_GOES_HERE
    secretName: dashboard-tls
  rules:
  - host: DASHBOARD_HOSTNAME_GOES_HERE
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
